--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,54 @@
     transform: rotate(360deg);
   }
 }
+*{
+  box-sizing: border-box;
+}
+html,body{
+  margin: 0;
+  padding: 0;
+}
+.title{
+  color: red;
+  align-content:center;
+}
+.container{
+  
+  background-color :aliceblue;
+  margin: 10px, 50px;
+}
+.formStyle{
+  padding: 15px 10px;
+  align-items: center;
+  justify-items: center;
+}
+input{
+  width: 50%;
+  border: solid 1px gray;
+  padding: 15px 10px;
+}
+button{
+  width: 200px;
+  padding: 15px;
+  background-color: antiquewhite;
+  color: blueviolet;
+  border: solid 2px black;
+  cursor: pointer;
+  border-radius: 20px;
+}
+button:hover{
+  background-color: blueviolet;
+  color: antiquewhite;
+}
+.bg {
+  /* The image used */
+  /*background-image: url("./login.jpg");*/
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
